# image_to_console

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_zh-CN.md  flake.nix
.github/workflows/: release.yml
build-options/: Cargo.toml
build-options/src/: lib.rs
image-to-console/: Cargo.toml
image-to-console-colored/: Cargo.toml
image-to-console-colored/src/: lib.rs  prelude.rs  shaders.rs  styles.rs
image-to-console-core/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
image-to-console-core-python/: Cargo.toml  README.md  pyproject.toml
image-to-console-core-python/image_to_console_core_python/: __init__.py  image_to_console_core_python.pyi
image-to-console-core-python/src/: lib.rs
image-to-console-core/examples/: README.md  basic-example.rs  converter-example.rs  kitty-shm.rs  option-example-builder.rs  option-example-chained.rs  process-image-example-with-option.rs  process-image-example.rs  process-images-example-vec-for_each.rs  process-images-example-vec-map.rs  process-images-example-vec-var-for_each.rs  process-images-example-vec-var-map.rs  process-images-example-vec-with-option.rs  process-images-example-vec.rs  process-images-example-with-option.rs  process-images-example.rs  process-images-example2-vec-mut.rs  process-images-example2-vec-nothing.rs  process-images-example2-vec-with-options.rs  process-images-example2-vec.rs  process-images-example2-with-options.rs  process-images-example2.rs  process-images-nothing.rs  protocol-example-builder.rs  protocol-example-chained.rs  resize-example-with-AutoResize.rs  resize-example-with-AutoResize2.rs  resize-example-with-CustomResize-with_height.rs  resize-example-with-CustomResize-with_width.rs  resize-example-with-CustomResize.rs  resize-example-with-None.rs  show-image-with-option.rs  show-images-vec-with-option.rs  show-images-vec.rs  show-images-with-option.rs  show-images.rs  simple-example-default.rs  simple-example-iterm.rs  simple-example-kitty.rs  simple-example.rs  (+2 more)
image-to-console-core/examples/example-cli/: Cargo.toml
image-to-console-core/examples/example-cli/src/: main.rs
image-to-console-core/src/: converter.rs  error.rs  gif_processor.rs  indexed_image.rs  lib.rs  macro_rules.rs  processor.rs  protocol.rs  shm.rs  util.rs
image-to-console-core/src/converter/: kitty_shm.rs  sixel.rs  unicode.rs
image-to-console-core/tests/: converter_test.rs  indexed_image_test.rs  processor_test.rs  protocol_test.rs  resize_mode_test.rs
image-to-console-renderer/: Cargo.toml
image-to-console-renderer/src/: audio_path.rs  config.rs  frame.rs  lib.rs  renderer.rs
image-to-console/src/: config.rs  const_value.rs  errors.rs  main.rs  runner.rs  types.rs  util.rs
image-to-console/src/color/: prelude.rs  shaders.rs
image-to-console/src/config/: cli.rs  dot_file.rs
image-to-console/src/display/: renderer.rs
src/: config.rs  const_value.rs  main.rs  runner.rs  types.rs  util.rs
src/color/: colors.rs  mod.rs  shaders.rs
src/display/: renderer.rs
src/image/: converter.rs  mod.rs  processor.rs
summon-schema/: Cargo.toml
summon-schema-derive/: Cargo.toml
summon-schema-derive/src/: lib.rs
summon-schema/examples/: basic-derive.rs  basic.rs
summon-schema/src/: lib.rs
video-decoder/: Cargo.toml
video-decoder/src/: decoder.rs  error.rs  lib.rs  video.rs
