[workspace]
members = [
    "image-to-console",
    "image-to-console-core",
    "image-to-console-colored",
    "image-to-console-renderer",
    "image-to-console-core-python", "build-options",
]
resolver = "2"

[profile.release]
lto = true
debug = false
opt-level = 3
panic = "abort"
codegen-units = 1
overflow-checks = false
debug-assertions = false
