[build-system]
requires = ["maturin>=1.0,<3.0"]
build-backend = "maturin"

[project]
name = "image_to_console_core_python"
version = "0.1.0"
description = "The python bindings of core library"
readme = "README.md"
requires-python = ">=3.8"
authors = [ {name="yyxxryrx", email="yyxxryrx@outlook.com"} ]
license = { text = "MIT" }
dependencies = []

[tool.maturin]
bindings = "pyo3"