[package]
name = "image_to_console_core"
version = "0.1.19"
edition = "2024"
rust-version = "1.85.1"

authors = ["yyxxryrx <yyxxryrx@outlook.com>"]
description = "A Rust library for converting images to terminal ASCII art, supporting multiple image formats and terminal output methods"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yyxxryrx/image_to_console"
homepage = "https://github.com/yyxxryrx/image_to_console"
keywords = ["image", "terminal", "console"]
categories = ["multimedia::images"]

[lib]
name = "image_to_console_core"
crate-type = ["lib"]

[features]
default = ["sixel"]
sixel = ["quantette", "nohash-hasher"]
clap_support = ["clap"]
auto_select = []
all = ["sixel", "clap_support", "auto_select", "crossterm"]

[[example]]
name = "basic-example"
path = "examples/basic-example.rs"

[[example]]
name = "simple-example"
path = "examples/simple-example.rs"

[[example]]
name = "simple-example-iterm"
path = "examples/simple-example-iterm.rs"

[[example]]
name = "simple-example-kitty"
path = "examples/simple-example-kitty.rs"

[[example]]
name = "simple-example-default"
path = "examples/simple-example-default.rs"

[[example]]
name = "resize-example-with-AutoResize"
path = "examples/resize-example-with-AutoResize.rs"

[[example]]
name = "resize-example-with-AutoResize2"
path = "examples/resize-example-with-AutoResize2.rs"

[[example]]
name = "resize-example-with-CustomResize"
path = "examples/resize-example-with-CustomResize.rs"

[[example]]
name = "resize-example-with-CustomResize-with_width"
path = "examples/resize-example-with-CustomResize-with_width.rs"

[[example]]
name = "resize-example-with-CustomResize-with_height"
path = "examples/resize-example-with-CustomResize-with_height.rs"

[[example]]
name = "protocol-example-builder"
path = "examples/protocol-example-builder.rs"

[[example]]
name = "protocol-example-chained"
path = "examples/protocol-example-chained.rs"

[[example]]
name = "example-cli"
path = "examples/example-cli/src/main.rs"


[dependencies]
rayon = "1.11.0"
base64 = "0.22.1"
num_cpus = "1.17.0"
terminal_size = "0.4.3"

[dependencies.gif]
optional = true
version = "0.13.3"

[dependencies.clap]
optional = true
version = "4.5.50"

[dependencies.image]
version = "0.25.8"
default-features = false
features = ["png", "jpeg"]

[dependencies.crossterm]
optional = true
version = "0.29.0"

[dependencies.nohash-hasher]
optional = true
version = "0.2.0"

[dependencies.quantette]
optional = true
version = "0.3.0"

[dev-dependencies]
image = "0.25.8"
