[package]
name = "image_to_console"
version = "0.1.15"
edition = "2024"

authors = ["yyxxryrx <yyxxryrx@outlook.com>"]

description = "A high-performance terminal image viewer written in Rust."
license = "MIT"
readme = "../README_zh-CN.md"
homepage = "https://github.com/yyxxryrx/image_to_console"
repository = "https://github.com/yyxxryrx/image_to_console"

keywords = ["image", "terminal", "console", "viewer"]
categories = ["command-line-utilities", "development-tools", "multimedia::images"]

[features]
default = ["reqwest", "gif_player", "sixel_support", "crossterm"]
video_player = ["ndarray", "video-rs", "ez-ffmpeg", "crossbeam-channel", "image_to_console_renderer/video_player"]
gif_player = ["gif", "image_to_console_core/gif", "crossbeam-channel", "image_to_console_renderer/gif_player"]
sixel_support = ["image_to_console_core/sixel"]
audio_support = ["image_to_console_renderer/rodio"]

[dependencies]
rayon = "1.11.0"
image = "0.25.4"
base64 = "0.22.1"
indicatif = "0.17.8"

[dependencies.gif]
optional = true
version = "0.13.3"

[dependencies.clap]
version = "4.5.20"
features = ["derive"]

[dependencies.reqwest]
optional = true
version = "0.12.9"
features = ["blocking"]

[dependencies.crossterm]
optional = true
version = "0.29.0"

[dependencies.ez-ffmpeg]
optional = true
version = "0.5.3"

[dependencies.ndarray]
optional = true
version = "0.16.1"

[dependencies.video-rs]
optional = true
version = "0.10.3"
features = ["ndarray"]

[dependencies.crossbeam-channel]
optional = true
version = "0.5.15"

[dependencies.image_to_console_core]
path = "../image-to-console-core"

[dependencies.image_to_console_colored]
path = "../image-to-console-colored"

[dependencies.image_to_console_renderer]
path = "../image-to-console-renderer"