[package]
name = "image_to_console"
version = "0.1.18"
edition = "2024"

authors = ["yyxxryrx <yyxxryrx@outlook.com>"]

description = "A high-performance terminal image viewer written in Rust."
license = "MIT"
readme = "../README_zh-CN.md"
homepage = "https://github.com/yyxxryrx/image_to_console"
repository = "https://github.com/yyxxryrx/image_to_console"

keywords = ["image", "terminal", "console", "viewer"]
categories = ["command-line-utilities", "development-tools", "multimedia::images"]

[features]
default = ["url", "gif_player", "sixel_support", "use_crossterm"]
url = ["ureq"]
video_player = ["ndarray", "video-rs", "ffmpeg-next", "crossbeam-channel", "image_to_console_renderer/video_player"]
gif_player = ["gif", "image_to_console_core/gif", "crossbeam-channel", "image_to_console_renderer/gif_player"]
sixel_support = ["image_to_console_core/sixel", "image_to_console_renderer/sixel_support"]
audio_support = ["image_to_console_renderer/rodio"]
use_crossterm = ["crossterm", "image_to_console_core/crossterm"]
dot_file = ["toml", "serde", "summon-schema", "serde_json"]

[dependencies]
rayon = "1.11.0"
image = "0.25.4"
base64 = "0.22.1"
indicatif = "0.17.8"
unicode-width = "0.2.2"

[dependencies.gif]
optional = true
version = "0.13.3"

[dependencies.clap]
version = "4.5.20"
features = ["derive", "string"]

[dependencies.toml]
optional = true
version = "1.0"

[dependencies.serde]
optional = true
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
optional = true
version = "1.0"

[dependencies.ureq]
optional = true
version = "3.2.0"

[dependencies.crossterm]
optional = true
version = "0.29.0"

[dependencies.ndarray]
optional = true
version = "0.17.2"

[dependencies.video-rs]
optional = true
version = "0.11.0"
features = ["ndarray"]

[dependencies.ffmpeg-next]
optional = true
version = "8.0.0"

[dependencies.crossbeam-channel]
optional = true
version = "0.5.15"

[dependencies.build-options]
path = "../build-options"

[dependencies.summon-schema]
optional = true
path = "../summon-schema"

[dependencies.image_to_console_core]
path = "../image-to-console-core"
features = ["auto_select", "clap_support"]

[dependencies.image_to_console_colored]
path = "../image-to-console-colored"

[dependencies.image_to_console_renderer]
path = "../image-to-console-renderer"
