[package]
name = "image_to_console"
version = "0.2.1"
edition = "2024"

authors = ["yyxxryrx <yyxxryrx@outlook.com>"]

description = "A high-performance terminal image viewer written in Rust."
readme = "../README_zh-CN.md"
homepage = "https://github.com/yyxxryrx/image_to_console"
repository = "https://github.com/yyxxryrx/image_to_console"
license = "MIT"

keywords = ["console", "image", "terminal", "viewer"]
categories = [
  "command-line-utilities",
  "development-tools",
  "multimedia::images",
]

[dependencies]
base64 = "0.22.1"
image = "0.25.4"
indicatif = "0.17.8"
rayon = "1.11.0"
unicode-width = "0.2.2"

[dependencies.build-options]
path = "../build-options"

[dependencies.clap]
version = "4.5.20"
features = ["derive", "string"]

[dependencies.crossbeam-channel]
version = "0.5.15"
optional = true

[dependencies.crossterm]
version = "0.29.0"
optional = true

[dependencies.dirs-next]
version = "2.0.0"
optional = true

[dependencies.ffmpeg-next]
version = "8.1.0"
optional = true

[dependencies.gif]
version = "0.13.3"
optional = true

[dependencies.image_to_console_colored]
path = "../image-to-console-colored"

[dependencies.image_to_console_core]
path = "../image-to-console-core"
default-features = false
features = ["auto_select", "clap_support", "processor"]

[dependencies.image_to_console_renderer]
path = "../image-to-console-renderer"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.summon-schema]
path = "../summon-schema"
optional = true

[dependencies.toml]
version = "1.0"
optional = true

[dependencies.ureq]
version = "3.2.0"
optional = true

[dependencies.video-decoder]
path = "../video-decoder"
optional = true

[features]
default = ["gif_player", "sixel_support", "url", "use_crossterm"]
audio_support = ["image_to_console_renderer/rodio"]
dot_file = ["dirs-next", "serde", "serde_json", "summon-schema", "toml"]
gif_player = [
  "crossbeam-channel",
  "gif",
  "image_to_console_core/gif",
  "image_to_console_renderer/gif_player",
]
sixel_support = [
  "image_to_console_core/sixel",
  "image_to_console_renderer/sixel_support",
]
url = ["ureq"]
use_crossterm = ["crossterm", "image_to_console_core/crossterm"]
video_player = [
  "crossbeam-channel",
  "ffmpeg-next",
  "image_to_console_renderer/video_player",
  "video-decoder",
]
